fixed table overflow

--- a/style.css
+++ b/style.css
@@ -23,18 +23,27 @@ main {
     margin-right: 80px;
     padding-bottom: 15px;
     text-align: center;
-    border-bottom: 1px solid black;
 }
 #listArea {
     margin-right: 80px;
-    width: 80vh;
+    display: grid;
+    grid-template-columns: repeat(6,1fr);
+    grid-template-rows: repeat(6,1fr);
+}
+
+tbody {
+    border-top: 1px solid black;
+    grid-column: span 1;
+    grid-row: span 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 th, td {
-    border-bottom: 1px solid #ddd;
     padding: 15px;
 }
-tr:hover {
+tbody:hover {
     background-color: #f5f5f5;
 }
 form {
